--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.2",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.0",
+        "laravel/reverb": "@beta",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0"
     },
