--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=WebMall
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:RF4L5mfQ0p0/TxqgMMHehlVTd8omi+hPgvNP/5rqU+Y=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://www.webmall.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -32,7 +32,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -46,13 +46,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME="karimkimakimo"
+MAIL_PASSWORD="ddmmsbnmynqhirlw"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="karimkimakimo@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -62,3 +63,24 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+REVERB_APP_ID=611889
+REVERB_APP_KEY=20bh4sij51xho4fzrlms
+REVERB_APP_SECRET=agqyj0mvkmkfk4bobv0p
+REVERB_HOST="webmall.test"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
+
+#AUTH VARIABLES
+
+GOOGLE_CLIENT_ID=879458641668-0cgt4457n0viu7o3nj1ii6te0tp9js49.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+FB_CLIENT_ID=653560243529168
+FB_CLIENT_SECRET=3d5a3da92a8d6594d2f9dc11150dcd2f
