--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=https://www.webmall.test
 
+APP_SCHEMA=https
+
+APP_HOST= webmall.test
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
